src/test/deca/context/invalid/obtained_res/castTypeDynacont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:45) - verify program: Pass 1 end
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:50) - verify program: Pass 2 end
DEBUG fr.ensimag.deca.tree.DeclClass.verifyClassBody(DeclClass.java:200) - Verifyng the class body of UneClasse
DEBUG fr.ensimag.deca.tree.DeclClass.verifyClassBody(DeclClass.java:200) - Verifyng the class body of DeuxClasses
DEBUG fr.ensimag.deca.tree.Main.verifyMain(Main.java:36) - verify Main: start
./src/test/deca/context/invalid/created/testCast/castTypeDyna.deca:13:25: TypeCastException: Cannot convert UneClasse to DeuxClasses (casting failed).
